--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.1",
     "survey-core": "^2.3.16",
     "survey-creator-react": "^2.3.16",
